# example-kernel-kboot-ktest-multicrate

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/another-crate/: Cargo.toml
crates/another-crate/src/: lib.rs
crates/basic-crate/: Cargo.toml
crates/basic-crate/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs  serial.rs
crates/extended-crate/: Cargo.toml
crates/extended-crate/src/: lib.rs  other_module.rs
