[package]
name = "basic-crate"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
ktest = "0.1.5"                       # for kernel testing framework
bootloader_api = { workspace = true } # for bootloader support and its structures

[lib]
doctest = false # disable doctests and their log outputs (we have no doctests)